<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/posterBgImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@mipmap/bg_poster"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutTopTabUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="22dp"
            android:paddingBottom="28dp"
            android:paddingStart="70dp"
            android:gravity="center_vertical">
            <LinearLayout
                android:layout_height="38dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/btnSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/selector_btn_poster_top"
                    android:gravity="center"
                    android:paddingHorizontal="18dp">
                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:src="@mipmap/ic_search"
                        android:layout_marginEnd="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:duplicateParentState="true"
                        android:textColor="@drawable/selector_poster_tab_text"
                        android:textSize="21sp"
                        android:text="@string/search"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btnHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/selector_btn_poster_top"
                    android:gravity="center"
                    android:layout_marginStart="24dp"
                    android:paddingHorizontal="18dp">
                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:src="@mipmap/ic_history"
                        android:layout_marginEnd="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:duplicateParentState="true"
                        android:textColor="@drawable/selector_poster_tab_text"
                        android:textSize="21sp"
                        android:text="@string/history"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btnFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/selector_btn_poster_top"
                    android:gravity="center"
                    android:layout_marginStart="24dp"
                    android:paddingHorizontal="18dp">
                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:src="@mipmap/ic_favorite"
                        android:layout_marginEnd="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:duplicateParentState="true"
                        android:textColor="@drawable/selector_poster_tab_text"
                        android:textSize="21sp"
                        android:text="@string/favorite"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btnMy"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/selector_btn_poster_top"
                    android:gravity="center"
                    android:layout_marginStart="24dp"
                    android:paddingHorizontal="18dp">
                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:src="@mipmap/ic_my"
                        android:layout_marginEnd="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:duplicateParentState="true"
                        android:textColor="@drawable/selector_poster_tab_text"
                        android:textSize="21sp"
                        android:text="@string/my"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btnVip"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/selector_btn_poster_top"
                    android:gravity="center"
                    android:layout_marginStart="24dp"
                    android:paddingHorizontal="18dp">
                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:src="@mipmap/ic_vip"
                        android:layout_marginEnd="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFD79C"
                        android:textSize="21sp"
                        android:text="@string/vip"/>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingVertical="3dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="54dp"
                android:scaleType="fitEnd" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/posterTabRecyclerView"
            android:layout_height="45dp"
            android:layout_width="match_parent"
            android:paddingStart="54dp"/>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/downLayoutRecyclerView"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <HorizontalScrollView
            android:id="@+id/scrollViewPoster"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scrollbars="none">
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="start"
                    android:paddingLeft="30dp"
                    android:paddingTop="20dp"
                    android:gravity="clip_horizontal">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/leftTabNameLayout"
                        android:visibility="gone">
                        <TextView
                            android:id="@+id/leftTabNameTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingVertical="20dp"
                            android:textSize="30sp"
                            android:lines="1"
                            android:gravity="center"
                            android:textColor="#ffffff"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintRight_toRightOf="parent"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="1px"
                            android:background="#90ffffff"
                            app:layout_constraintLeft_toLeftOf="@+id/leftTabNameTextView"
                            app:layout_constraintRight_toRightOf="@+id/leftTabNameTextView"
                            app:layout_constraintTop_toBottomOf="@+id/leftTabNameTextView"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/leftTabRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="10dp"/>
                </LinearLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/videoRecyclerView"
                            android:layout_height="0dp"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:paddingVertical="10dp"
                            android:paddingHorizontal="50dp"/>
                        <TextView
                            android:id="@+id/noDataHintTextView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="20sp"
                            android:gravity="center"
                            android:textColor="@color/cardview_light_background"/>
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/leftPoster"
                        android:visibility="gone"
                        android:layout_gravity="center_vertical"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:src="@mipmap/left_poster"/>
                </FrameLayout>
            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

    <TextView
        android:visibility="visible"
        android:id="@+id/tvLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="20sp"
        android:paddingTop="130dp"
        android:background="@mipmap/bg_poster"
        android:text="@string/loading"/>

    <LinearLayout
        android:id="@+id/layoutProgress"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@mipmap/bg_progress">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="30dp"
            android:src="@mipmap/icon_logo_progress"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="500dp"
                android:layout_height="8dp"
                android:progressDrawable="@drawable/pb_home"
                android:indeterminateOnly="false"
                android:max="100"
                android:progress="0"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#fff"
            android:layout_marginTop="12dp"
            android:text="@string/resource_loading"/>
    </LinearLayout>

</FrameLayout>