<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cardview_dark_background">

    <ImageView
        android:id="@+id/detailBgImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#50000000"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@mipmap/bg_detail_"/>

    <LinearLayout
        android:id="@+id/bgLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="316dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#4d000000"
        android:layout_marginBottom="40dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/typeRecyclerView"
        android:visibility="invisible"
        android:layout_height="40dp"
        android:layout_width="wrap_content"
        android:maxWidth="134dp"
        android:layout_marginBottom="14dp"
        android:layout_marginStart="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/bgLayout"/>

    <com.wuji.tv.widget.RoundImageView
        android:id="@+id/detailImage"
        android:layout_width="240dp"
        android:layout_height="360dp"
        android:scaleType="centerCrop"
        android:background="@mipmap/ic_poster_video"
        app:radius="15"
        app:layout_constraintLeft_toLeftOf="@+id/typeRecyclerView"
        app:layout_constraintBottom_toTopOf="@+id/typeRecyclerView"/>
    <TextView
        android:id="@+id/videoRating"
        android:visibility="gone"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:background="@mipmap/bg_rating"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="#fff"
        app:layout_constraintTop_toTopOf="@id/detailImage"
        app:layout_constraintRight_toRightOf="@id/detailImage"/>

    <TextView
        android:id="@+id/titleDetailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/cardview_light_background"
        android:textSize="34sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/tabRecyclerView"
        app:layout_constraintRight_toRightOf="@+id/tabRecyclerView"
        app:layout_constraintBottom_toTopOf="@+id/tabRecyclerView"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tabRecyclerView"
        android:layout_height="20dp"
        android:layout_width="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="34dp"
        app:layout_constraintLeft_toRightOf="@+id/detailImage"
        app:layout_constraintRight_toRightOf="@+id/bgLayout"
        app:layout_constraintBottom_toTopOf="@+id/bgLayout"/>

    <LinearLayout
        android:id="@+id/downloadBtn"
        android:layout_width="146dp"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:background="@drawable/selector_btn_detail"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:focusable="true"
        app:layout_constraintLeft_toLeftOf="@+id/titleDetailTextView"
        app:layout_constraintTop_toTopOf="@+id/bgLayout">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/icon_detail_download"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18sp"
            android:text="@string/download"/>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/stagePhotoBtn"
        android:layout_width="146dp"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:background="@drawable/selector_btn_detail"
        android:gravity="center"
        android:focusable="true"
        android:layout_marginStart="14dp"
        app:layout_constraintLeft_toRightOf="@+id/downloadBtn"
        app:layout_constraintTop_toTopOf="@+id/downloadBtn">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/icon_detail_stage_photo"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18sp"
            android:text="@string/stage_photo"/>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/trailerBtn"
        android:layout_width="146dp"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:background="@drawable/selector_btn_detail"
        android:gravity="center"
        android:focusable="true"
        android:layout_marginStart="14dp"
        app:layout_constraintLeft_toRightOf="@+id/stagePhotoBtn"
        app:layout_constraintTop_toTopOf="@+id/stagePhotoBtn">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/icon_detail_trailer"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18sp"
            android:text="@string/trailer"/>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/sampleBtn"
        android:layout_width="146dp"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:background="@drawable/selector_btn_detail"
        android:gravity="center"
        android:focusable="true"
        android:layout_marginStart="14dp"
        app:layout_constraintLeft_toRightOf="@+id/trailerBtn"
        app:layout_constraintTop_toTopOf="@+id/trailerBtn">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/icon_detail_trailer"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18sp"
            android:text="@string/sample"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/playBtn"
        android:layout_width="146dp"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:background="@drawable/selector_btn_detail"
        android:gravity="center"
        android:focusable="true"
        android:layout_marginStart="14dp"
        app:layout_constraintLeft_toRightOf="@+id/sampleBtn"
        app:layout_constraintTop_toTopOf="@+id/sampleBtn">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/icon_detail_play"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18sp"
            android:text="@string/play"/>
    </LinearLayout>

    <com.wuji.tv.widget.ScaleRecyclerView
        android:id="@+id/tvSeriesRecyclerView"
        android:layout_height="46dp"
        android:layout_width="0dp"
        app:layout_constraintLeft_toRightOf="@+id/playBtn"
        app:layout_constraintRight_toRightOf="@+id/tabRecyclerView"
        app:layout_constraintTop_toTopOf="@+id/downloadBtn"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/pathDetailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/cardview_light_background"
        android:textSize="14sp"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="@+id/titleDetailTextView"
        app:layout_constraintRight_toRightOf="@+id/titleDetailTextView"
        app:layout_constraintBottom_toBottomOf="@+id/bgLayout"/>

    <ScrollView
        android:id="@+id/plotScrollView"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="14dp"
        android:layout_marginStart="20dp"
        android:focusable="true"
        android:background="@drawable/selector_plot"
        android:padding="6dp"
        app:layout_constraintLeft_toRightOf="@+id/detailImage"
        app:layout_constraintRight_toRightOf="@+id/titleDetailTextView"
        app:layout_constraintTop_toBottomOf="@+id/downloadBtn"
        app:layout_constraintBottom_toTopOf="@+id/pathDetailTextView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:id="@+id/directorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="#ffffff"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/protagonistTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="#ffffff"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/plotTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="#ffffff"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>